categories overlap fixed

--- a/assets/styles/first-screen/search.css
+++ b/assets/styles/first-screen/search.css
@@ -64,6 +64,9 @@ article.status-private {
     top:-7px;
     z-index:2;
     padding:8px 24px;
+    max-width:100%;
+    overflow:hidden;
+    text-overflow:ellipsis;
     background-color:var(--blog-main-color);
     font-size:14px;
     font-weight:700;
